--- a/bindings/python3/CMakeLists.txt
+++ b/bindings/python3/CMakeLists.txt
@@ -1,9 +1,17 @@
-# Needs the following cache variables:
 #
-# PYTHON3_EXECUTABLE
-# PYTHON3_INCLUDE_DIR
+# used for building both python2 and python3 bindings
+# do not use if you want to build just one flavor, use the
+# standard python bindings file in that case.
 #
+# we cannot use FIND_PACKAGE PythonLibs here, as this would
+# clash with the python variables.
+#
+IF (NOT DEFINED ${PYTHON3_EXECUTABLE})
+SET (PYTHON3_EXECUTABLE "/usr/bin/python3")
+ENDIF (NOT DEFINED ${PYTHON3_EXECUTABLE})
+
 EXECUTE_PROCESS(COMMAND ${PYTHON3_EXECUTABLE} -c "from sys import stdout; from distutils import sysconfig; stdout.write(sysconfig.get_python_lib(True))" OUTPUT_VARIABLE PYTHON3_INSTALL_DIR)
+EXECUTE_PROCESS(COMMAND ${PYTHON3_EXECUTABLE} -c "from sys import stdout; from distutils import sysconfig; stdout.write(sysconfig.get_python_inc())" OUTPUT_VARIABLE PYTHON3_INCLUDE_DIR)
 
 MESSAGE (STATUS "Python3 executable: ${PYTHON3_EXECUTABLE}")
 MESSAGE (STATUS "Python3 installation dir: ${PYTHON3_INSTALL_DIR}")
