Oops, fix typo in last commit

--- a/bindings/python/CMakeLists.txt
+++ b/bindings/python/CMakeLists.txt
@@ -3,7 +3,7 @@ IF (ENABLE_PYTHON3 AND NOT DEFINED PythonLibs_FIND_VERSION)
     # see comment in the python3 CMakeLists.txt file
     SET (PythonLibs_FIND_VERSION 2)
     SET (PythonLibs_FIND_VERSION_MAJOR 2)
-ENDIF IF (ENABLE_PYTHON3 AND NOT DEFINED PythonLibs_FIND_VERSION)
+ENDIF (ENABLE_PYTHON3 AND NOT DEFINED PythonLibs_FIND_VERSION)
 
 FIND_PACKAGE (PythonLibs REQUIRED)
 FIND_PACKAGE (PythonInterp ${PYTHONLIBS_VERSION_STRING} REQUIRED)
