Support a DB_INCLUDE_DIR variable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -207,6 +207,9 @@ IF (ENABLE_RPMDB)
     IF (DB_LIBRARY)
       SET (RPMDB_LIBRARY ${DB_LIBRARY} ${RPMDB_LIBRARY})
     ENDIF (DB_LIBRARY)
+    IF (DB_INCLUDE_DIR)
+      INCLUDE_DIRECTORIES (${DB_INCLUDE_DIR})
+    ENDIF (DB_INCLUDE_DIR)
   ENDIF (NOT HAVE_RPM_DB_H)
   INCLUDE (CheckLibraryExists)
   CHECK_LIBRARY_EXISTS(rpmio pgpDigGetParams "" HAVE_PGPDIGGETPARAMS)
