let users override MAN_INSTALL_DIR
this makes the build more cooperative with FreeBSD ports:
FreeBSD wants man pages in ${PREFIX}/man, yet ${PREFIX}/share/man
exists in the staging area as well for some reason.  i'm too lazy
to chase the cause, esp. as the copout means more freedom to users.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,10 +58,12 @@ else (DEFINED INCLUDE)
 ENDIF (DEFINED  INCLUDE)
 MESSAGE (STATUS "Header files will be installed in ${INCLUDE_INSTALL_DIR}")
 SET (BIN_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/bin")
+IF (NOT MAN_INSTALL_DIR)
 SET (MAN_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/share/man")
 IF (IS_DIRECTORY "${CMAKE_INSTALL_PREFIX}/man"  AND NOT IS_DIRECTORY "${CMAKE_INSTALL_PREFIX}/share/man")
   SET (MAN_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/man")
 ENDIF (IS_DIRECTORY "${CMAKE_INSTALL_PREFIX}/man"  AND NOT IS_DIRECTORY "${CMAKE_INSTALL_PREFIX}/share/man")
+ENDIF (NOT MAN_INSTALL_DIR)
 MESSAGE(STATUS "Man pages will be installed in ${MAN_INSTALL_DIR}")
 
 ####################################################################
