Split libsolvext into it's own pkg-config file
Signed-off-by: Alejandro del Castillo <alejandro.delcastillo@ni.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -393,9 +393,11 @@ MACRO (SPECFILE)
 ENDMACRO (SPECFILE)
 
 MACRO (PCFILE)
-  MESSAGE (STATUS "Writing pkg-config file...")
+  MESSAGE (STATUS "Writing pkg-config files...")
   CONFIGURE_FILE (${CMAKE_SOURCE_DIR}/libsolv.pc.in ${CMAKE_BINARY_DIR}/libsolv.pc @ONLY)
   INSTALL( FILES ${CMAKE_BINARY_DIR}/libsolv.pc DESTINATION ${PKGCONFIG_INSTALL_DIR} )
+  CONFIGURE_FILE (${CMAKE_SOURCE_DIR}/libsolvext.pc.in ${CMAKE_BINARY_DIR}/libsolvext.pc @ONLY)
+  INSTALL( FILES ${CMAKE_BINARY_DIR}/libsolvext.pc DESTINATION ${PKGCONFIG_INSTALL_DIR} )
 ENDMACRO (PCFILE)
 
 SPECFILE ()
