--- a/package/libsolv.spec.in
+++ b/package/libsolv.spec.in
@@ -256,7 +256,7 @@ rm -rf "$RPM_BUILD_ROOT"
 %{_mandir}/man1/helix2solv*
 %endif
 %{_datadir}/cmake/Modules/*
-%{_libdir}/pkgconfig/libsolv.pc
+%{_libdir}/pkgconfig/libsolv*.pc
 %{_mandir}/man3/*
 
 %files demo
