Add ENABLE_TESTCASE_HELIXREPO as hidden compile option
This is pretty much just for me using testsolv on testcases
generated by libzypp. There used to be a #if 0 in the code which
I manually toggled, but the option is much saner.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -284,7 +284,7 @@ ENDFOREACH (VAR)
 
 FOREACH (VAR
   ENABLE_RPMDB ENABLE_RPMPKG ENABLE_PUBKEY ENABLE_RPMMD ENABLE_RPMDB_BYRPMHEADER
-  ENABLE_SUSEREPO ENABLE_COMPS
+  ENABLE_SUSEREPO ENABLE_COMPS ENABLE_TESTCASE_HELIXREPO
   ENABLE_HELIXREPO ENABLE_MDKREPO ENABLE_ARCHREPO ENABLE_DEBIAN ENABLE_HAIKU
   ENABLE_ZLIB_COMPRESSION ENABLE_LZMA_COMPRESSION ENABLE_BZIP2_COMPRESSION
   ENABLE_PGPVRFY ENABLE_APPDATA)
