Add Libs.private to libsolvext.pc to declare libraries linked in

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -396,6 +396,7 @@ ENDIF (ENABLE_RPMDB)
 IF (ENABLE_HAIKU)
 SET (SYSTEM_LIBRARIES ${HAIKU_SYSTEM_LIBRARIES} ${SYSTEM_LIBRARIES})
 ENDIF (ENABLE_HAIKU)
+SET (PRIVATE_LIBRARIES ${SYSTEM_LIBRARIES})
 IF (HAVE_LINKER_AS_NEEDED)
 SET (SYSTEM_LIBRARIES "-Wl,--as-needed" ${SYSTEM_LIBRARIES})
 ENDIF (HAVE_LINKER_AS_NEEDED)
@@ -420,6 +421,17 @@ MACRO (SPECFILE)
   CONFIGURE_FILE (${CMAKE_SOURCE_DIR}/package/libsolv.spec.in ${CMAKE_BINARY_DIR}/package/libsolv.spec @ONLY)
 ENDMACRO (SPECFILE)
 
+MACRO (PRIVATELIBS)
+  FOREACH (LIB ${PRIVATE_LIBRARIES})
+    IF (IS_ABSOLUTE ${LIB} AND EXISTS ${LIB})
+      LIST(APPEND PLIBLIST "${LIB}")
+    ELSE ()
+      LIST(APPEND PLIBLIST "-l${LIB}")
+    ENDIF ()
+     STRING(REPLACE ";" " " PRIVATE_LIBS "${PLIBLIST}")
+  ENDFOREACH ()
+ENDMACRO (PRIVATELIBS)
+
 MACRO (PCFILE)
   MESSAGE (STATUS "Writing pkg-config files...")
   CONFIGURE_FILE (${CMAKE_SOURCE_DIR}/libsolv.pc.in ${CMAKE_BINARY_DIR}/libsolv.pc @ONLY)
@@ -429,6 +441,7 @@ MACRO (PCFILE)
 ENDMACRO (PCFILE)
 
 SPECFILE ()
+PRIVATELIBS ()
 PCFILE ()
 
 SET (AUTOBUILD_COMMAND
