Support deb packages with xz compressed control.tar

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -156,9 +156,9 @@ IF (${have_system} STRGREATER xx)
 ENDIF (${have_system} STRGREATER xx)
 
 SET (ENABLE_ZLIB_COMPRESSION ON)
-IF (ENABLE_ARCHREPO)
+IF (ENABLE_ARCHREPO OR ENABLE_DEBIAN)
 SET (ENABLE_LZMA_COMPRESSION ON)
-ENDIF (ENABLE_ARCHREPO)
+ENDIF (ENABLE_ARCHREPO OR ENABLE_DEBIAN)
 
 IF (ENABLE_RPMMD OR ENABLE_SUSEREPO OR ENABLE_APPDATA OR ENABLE_COMPS OR ENABLE_HELIXREPO OR ENABLE_MDKREPO)
 IF (WITH_LIBXML2 )
