Support using librpm for header and database access
Based on my rebased + tweaked version of Florians librpm patch,
additionally chainsawed to use rpm's own header access code and tag
definitions instead of libsolvs own implementation.

On my laptop, this is ~10% slower than the libsolv implementation but
also ~10% faster than the version which uses libsolv's header code
but librpm for db access. And obviously the about of code duplication
is intolerable...

--- a/ext/CMakeLists.txt
+++ b/ext/CMakeLists.txt
@@ -6,7 +6,14 @@ SET (libsolvext_HEADERS
 
 IF (ENABLE_RPMDB OR ENABLE_RPMPKG)
     SET (libsolvext_SRCS ${libsolvext_SRCS}
-        pool_fileconflicts.c repo_rpmdb.c)
+        pool_fileconflicts.c)
+    IF (ENABLE_RPMDB_BYRPMHEADER)
+        SET (libsolvext_SRCS ${libsolvext_SRCS}
+            repo_rpmdb_librpm.c)
+    ELSE (ENABLE_RPMDB_BYRPMHEADER)
+        SET (libsolvext_SRCS ${libsolvext_SRCS}
+           repo_rpmdb.c)
+    ENDIF (ENABLE_RPMDB_BYRPMHEADER)
     SET (libsolvext_HEADERS ${libsolvext_HEADERS}
         pool_fileconflicts.h repo_rpmdb.h)
 ENDIF (ENABLE_RPMDB OR ENABLE_RPMPKG)
