--- a/package/libsolv.spec.in
+++ b/package/libsolv.spec.in
@@ -233,12 +233,13 @@ export NO_BRP_STRIP_DEBUG=true
 %postun -n %{libname} -p /sbin/ldconfig
 
 %files -n %{libname}
-%doc LICENSE*
+%license LICENSE*
 %{_libdir}/libsolv.so.*
 %{_libdir}/libsolvext.so.*
 %endif
 
 %files tools
+%license LICENSE*
 %if 0%{?suse_version}
 %exclude %{_bindir}/helix2solv
 %exclude %{_mandir}/man1/helix2solv*
@@ -248,6 +249,7 @@ export NO_BRP_STRIP_DEBUG=true
 %{_mandir}/man1/*
 
 %files devel
+%license LICENSE*
 %if %{with static}
 %{_libdir}/libsolv.a
 %{_libdir}/libsolvext.a
