--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,5 +1,5 @@
-IF (SUSE OR FEDORA OR DEBIAN OR MANDRIVA OR MAGEIA)
+IF (SUSE OR FEDORA OR DEBIAN OR MANDRIVA OR MAGEIA OR PHOTON)
 
 ADD_SUBDIRECTORY (solv)
 
-ENDIF (SUSE OR FEDORA OR DEBIAN OR MANDRIVA OR MAGEIA)
+ENDIF (SUSE OR FEDORA OR DEBIAN OR MANDRIVA OR MAGEIA OR PHOTON)
