fixup! Not remove gpg-pubkey from rpmdb (RhBug:1577170)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ OPTION (ENABLE_RPMPKG "Build with rpm package support?" OFF)
 OPTION (ENABLE_PUBKEY "Build with pubkey support?" OFF)
 OPTION (ENABLE_RPMDB_BYRPMHEADER "Build with rpmdb Header support?" OFF)
 OPTION (ENABLE_RPMDB_LIBRPM "Use librpm to access the rpm database?" OFF)
-OPTION (ENABLE_RPMDB_GPG_PUBKEY_REMOVAL "Remove gpg-pubkey from rpm database?" ON)
+OPTION (RPM_KEEP_GPG_PUBKEY "Keep gpg-pubkey in rpm database?" OFF)
 OPTION (ENABLE_RPMPKG_LIBRPM "Use librpm to access rpm header information?" OFF)
 OPTION (ENABLE_RPMMD "Build with rpmmd repository support?" OFF)
 OPTION (ENABLE_SUSEREPO "Build with suse repository support?" OFF)
@@ -83,7 +83,7 @@ MESSAGE(STATUS "Building for Fedora")
 ADD_DEFINITIONS (-DFEDORA)
 SET (ENABLE_RPMDB ON)
 SET (ENABLE_RPMMD ON)
-SET (ENABLE_RPMDB_GPG_PUBKEY_REMOVAL OFF)
+SET (RPM_KEEP_GPG_PUBKEY ON)
 SET (have_system ${have_system}x)
 ENDIF (FEDORA)
 
