--- a/examples/solv/CMakeLists.txt
+++ b/examples/solv/CMakeLists.txt
@@ -25,5 +25,5 @@ TARGET_LINK_LIBRARIES (solv libsolvext libsolv ${SYSTEM_LIBRARIES})
 
 INSTALL(TARGETS
     solv
-    DESTINATION ${BIN_INSTALL_DIR})
+    DESTINATION ${CMAKE_INSTALL_BINDIR})
 
